# One-Piece-C

./: .directory  .gitignore  CMakeLists.txt  README.md  luffy.json  resources.json  zoro.json
include/: Game.h  Game.hpp  Music_player.h  Music_player.hpp  Resource_manager.h  Resource_manager.hpp  Utility.hpp
include/Animations/: Animation.h  Animation.hpp  Animation_base.hpp  Animation_effect.h  Animation_effect.hpp  Animation_launcher.hpp  Fade_animation.hpp  Frame_animation.hpp  Function_animation.h  Function_animation.hpp  Standard_function_animation.h  Standard_function_animation.hpp
include/Objects/: Character_base.h  Character_base.hpp  Luffy.h  Luffy.hpp  Object.h  Object.hpp  Object_base.h  Object_base.hpp  Zoro.h  Zoro.hpp
include/States/: Menu_state.h  Menu_state.hpp  Play_state.h  Play_state.hpp  State_base.h  State_base.hpp
src/: Game.cpp  Music_player.cpp  Resource_manager.cpp  Utility.cpp  main.cpp
src/Animations/: Animation.cpp  Animation_effect.cpp  Fade_animation.cpp  Frame_animation.cpp  Function_animation.cpp  Standard_function_animation.cpp
src/Objects/: Character_base.cpp  Luffy.cpp  Object.cpp  Object_base.cpp  Zoro.cpp
src/States/: Menu_state.cpp  Play_state.cpp  State_base.cpp
